--- a/support/windows-365/toc.yml
+++ b/support/windows-365/toc.yml
@@ -5,6 +5,8 @@ items:
   href: ./health-checks.md
 - name: Connection errors
   href: ./connection-errors.md
+- name: Connection fails with "Failed to open a Microsoft Entra ID credential prompt."
+  href: connection-fails-with-failed-to-open-a-microsoft-entra-id-credential-prompt.md
 - name: Known issues with Windows 365 Business
   href: ./known-issues.md
 - name: Known issues with Windows 365 Enterprise and Frontline
