--- a/support/dynamics-365/sales/toc.yml
+++ b/support/dynamics-365/sales/toc.yml
@@ -1,11 +1,15 @@
 - name: Dynamics 365 Sales
   href: welcome-sales.yml
-- name: Customization and Solutions
+- name: Customization
   items:
     - name: Button in command bar don't show after grid item selection
       href: button-in-command-bar-not-appear-after-grid-item-selection.md
-- name: Dynamics 365 Server
+- name: Forecasting
   items:
+    - name: Troubleshoot forecasts
+      href: troubleshoot-forecast-issues.md
+    - name: Troubleshoot Sales Pipeline chart
+      href: troubleshoot-sales-pipeline-issues.md
 - name: LinkedIn Sales Navigator
   items:
     - name: Can't view photos on custom contact and lead forms in Unified Interface
@@ -17,8 +21,58 @@
     - name: LinkedIn Sales Navigator display widgets don't load properly
       href: lisn-display-widgets-not-loading-properly.md
     - name: LinkedInSalesNavigatorControlsForUnifiedClient isn't available in the organization
-      href: lisn-solution-not-available-configure-lisn.md 
-- name: Microsoft Teams Integration
+      href: lisn-solution-not-available-configure-lisn.md
+- name: Marketing
+  items:
+    - name: Troubleshoot in-app marketing
+      href: troubleshoot-in-app-marketing-issues.md
+- name: Opportunity
+  items:
+    - name: Troubleshoot common tables
+      href: troubleshoot-multiple-tables-issues.md
+    - name: Troubleshoot opportunities
+      href: troubleshoot-opportunities-issues.md
+    - name: Troubleshoot views
+      href: troubleshoot-table-views-issues.md
+- name: Order
+  items:
+    - name: Troubleshoot orders
+      href: troubleshoot-orders-issues.md
+- name: Price list
+  items:
+    - name: Troubleshoot currency and price lists
+      href: troubleshoot-currency-and-price-lists-issues.md
+- name: Product
+  items:
+    - name: Troubleshoot products
+      href: troubleshoot-products-issues.md
+- name: Sales app
+  items:
+    - name: Troubleshoot Unified Interface
+      href: troubleshoot-unified-interface-issues.md
+- name: Sales app installation
+  items:
+    - name: Troubleshoot Sales Professional
+      href: troubleshoot-sales-professional-issues.md
+- name: Sales Hub
+  items:
+    - name: Lead
+      items:
+        - name: Troubleshoot automatic generation of contact or company-related fields
+          href: troubleshoot-lead-form-auto-generated-contact-company-fields.md
+        - name: Troubleshoot lead qualification issues for salespeople
+          href: troubleshoot-lead-qualification-issues-for-salespeople.md
+        - name: Troubleshoot lead qualification for system administrators
+          href: troubleshoot-lead-qualification-issues-for-system-admin.md
+- name: Sales Insights
+  items:
+    - name: Troubleshoot emails
+      href: troubleshoot-emails-issues.md
+    - name: Troubleshoot Sales Premium
+      href: troubleshoot-sales-premium-issues.md
+    - name: Troubleshoot relationship intelligence
+      href: troubleshoot-relationship-intelligence.md
+- name: Teams Dialer
   items:
     - name: Can't enable Teams dialer
       href: cannot-enable-dialer.md
@@ -38,41 +92,3 @@
       href: dialer-not-available-in-custom-app.md
     - name: Teams dialer isn't visible in the Sales Hub
       href: dialer-not-visible-in-sales.md
-- name: Sales Hub
-  items:
-    - name: Troubleshoot common tables
-      href: troubleshoot-multiple-tables-issues.md
-    - name: Troubleshoot currency and price lists
-      href: troubleshoot-currency-and-price-lists-issues.md
-    - name: Troubleshoot emails
-      href: troubleshoot-emails-issues.md
-    - name: Troubleshoot forecasts
-      href: troubleshoot-forecast-issues.md
-    - name: Troubleshoot in-app marketing
-      href: troubleshoot-in-app-marketing-issues.md
-    - name: Troubleshoot leads
-      items:
-        - name: Troubleshoot automatic generation of contact or company-related fields
-          href: troubleshoot-lead-form-auto-generated-contact-company-fields.md
-        - name: Troubleshoot lead qualification issues for salespeople
-          href: troubleshoot-lead-qualification-issues-for-salespeople.md
-        - name: Troubleshoot lead qualification for system administrators
-          href: troubleshoot-lead-qualification-issues-for-system-admin.md
-    - name: Troubleshoot opportunities
-      href: troubleshoot-opportunities-issues.md
-    - name: Troubleshoot orders
-      href: troubleshoot-orders-issues.md
-    - name: Troubleshoot products
-      href: troubleshoot-products-issues.md
-    - name: Troubleshoot Sales Pipeline chart
-      href: troubleshoot-sales-pipeline-issues.md
-    - name: Troubleshoot Sales Premium
-      href: troubleshoot-sales-premium-issues.md
-    - name: Troubleshoot Sales Professional
-      href: troubleshoot-sales-professional-issues.md
-    - name: Troubleshoot Unified Interface
-      href: troubleshoot-unified-interface-issues.md
-    - name: Troubleshoot views
-      href: troubleshoot-table-views-issues.md
-    - name: Troubleshoot relationship intelligence
-      href: troubleshoot-relationship-intelligence.md
