--- a/support/dynamics-365/sales/toc.yml
+++ b/support/dynamics-365/sales/toc.yml
@@ -22,7 +22,7 @@
       href: lisn-display-widgets-not-loading-properly.md
     - name: LinkedInSalesNavigatorControlsForUnifiedClient isn't available in the organization
       href: lisn-solution-not-available-configure-lisn.md
-- name: Marketing
+- name: Enterprise Marketing
   items:
     - name: Troubleshoot in-app marketing
       href: troubleshoot-in-app-marketing-issues.md
@@ -54,16 +54,14 @@
   items:
     - name: Troubleshoot Sales Professional
       href: troubleshoot-sales-professional-issues.md
-- name: Sales Hub
+- name: Lead
   items:
-    - name: Lead
-      items:
-        - name: Troubleshoot automatic generation of contact or company-related fields
-          href: troubleshoot-lead-form-auto-generated-contact-company-fields.md
-        - name: Troubleshoot lead qualification issues for salespeople
-          href: troubleshoot-lead-qualification-issues-for-salespeople.md
-        - name: Troubleshoot lead qualification for system administrators
-          href: troubleshoot-lead-qualification-issues-for-system-admin.md
+    - name: Troubleshoot automatic generation of contact or company-related fields
+      href: troubleshoot-lead-form-auto-generated-contact-company-fields.md
+    - name: Troubleshoot lead qualification issues for salespeople
+      href: troubleshoot-lead-qualification-issues-for-salespeople.md
+    - name: Troubleshoot lead qualification for system administrators
+      href: troubleshoot-lead-qualification-issues-for-system-admin.md
 - name: Sales Insights
   items:
     - name: Troubleshoot emails
