--- a/support/windows-365/toc.yml
+++ b/support/windows-365/toc.yml
@@ -9,6 +9,8 @@ items:
   href: ./known-issues.md
 - name: Known issues with Windows 365 Enterprise and Frontline
   href: ./known-issues-enterprise.md
+- name: 'OOBE fails with error "An error has occurred"'
+  href: ./oobe-fails-error-has-occurred.md
 - name: Provisioning errors
   href: ./provisioning-errors.md
 - name: Troubleshoot Azure network connections
